--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <h1>Welcome to Victor Yu's Homepage!</h1>
     <p>Hello everyone! My name is Victor. My email address is xiaohan.yu@tufts.edu. You can also reach me at
-        (413)695-7479.</p>
+        (413)695-7479. I am a computer science major, and my IP address is 130.64.25.62.</p>
 </body>
 
 </html>
